# audio-transcription

./: .gitignore  BENCHMARKS.md  CLAUDE.md  README.md  SPEC.md  pyproject.toml  vocabulary.json
src/transcribe_cli/: cli.py  config.py  scanner.py  tracker.py  transcriber.py  vocabulary.py
tests/: test_vocabulary.py
