[project]
name = "audio-transcription"
version = "0.1.0"
description = "Local-first CLI for batch transcribing audio/video files using mlx-whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-whisper",
    "typer",
    "rich",
]

[project.scripts]
transcribe = "transcribe_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe_cli"]
